--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
         <h1>Soumya Ray</h1>
         <img src="http://scontent-b-sjc.xx.fbcdn.net/hphotos-ash3/t1.0-9/556713_315533058535785_643286304_n.jpg" />
         <p></p>
+        <p class="view"><a href="/research">Research</a></p>
         <p class="view"><a href="/CV">Curriculum Vitae</a></p>
         <p class="view"><a href="https://github.com/soumyaray">View My GitHub Profile</a></p>
 
       </header>
       <section>
-        <p>ehllo</p>
-
+        
       </section>
 
       <footer>
