changed CV to background

--- a/background/index.html
+++ b/background/index.html
@@ -21,7 +21,7 @@
         <img src="http://scontent-b-sjc.xx.fbcdn.net/hphotos-ash3/t1.0-9/556713_315533058535785_643286304_n.jpg" />
         <p></p>
         <p class="view"><a href="/research">Research</a></p>
-        <p class="view"><a href="/CV">Curriculum Vitae</a></p>
+        <p class="view"><a href="/background">Academic Background</a></p>
         <p class="view"><a href="https://github.com/soumyaray">View My GitHub Profile</a></p>
 
       </header>
@@ -81,22 +81,6 @@
 <td>Institute of Service Science</td>
 </tr>
 </tbody></table>
-
-<h2 id="toc_2">Research Papers</h2>
-
-<p>Ray, S., Kim, S. S., and Morris, J. G. 2012. “Online Users&#39; Switching Costs:
-Their Nature and Formation,” <em>Information Systems Research</em> (23:1), pp. 197–213.</p>
-
-<p>Ray, S., Ow, T., and Kim, S. S. 2011. “Security Assurance: How Online Service
-Providers Can Influence Security Control Perceptions and Gain Trust,”
-<em>Decision Sciences</em> (42:2), pp. 391–412.</p>
-
-<p>Ray, S., and Seo, D. 2013. “The Interplay of Conscious and Automatic Mechanisms
-in the Context of Routine Use: An Integrative and Comparative Study of
-Contrasting Mechanisms,” <em>Information and Management</em> (50:7), pp. 523–539.</p>
-
-<p>Ray, S., Kim, S.S., and Morris, J. G. “The Central Role of Engagement in Online
-Communities,” <em>forthcoming: Information Systems Research</em>.</p>
 
       </section>
 
