new home page (includes)

--- a/index.html
+++ b/index.html
@@ -26,7 +26,90 @@
 
       </header>
       <section>
-        
+        <hr>
+
+<p>layout: default</p>
+
+<h2 id="toc_0">title: Soumya Ray&#39;s CV</h2>
+
+<h2 id="toc_1">Education</h2>
+
+<table><thead>
+<tr>
+<th></th>
+<th></th>
+</tr>
+</thead><tbody>
+<tr>
+<td><b>Doctor of Philosophy</b></td>
+<td>University of Wisconsin-Madison (2010)</td>
+</tr>
+<tr>
+<td></td>
+<td>Information Systems; Applied Statistical Methods</td>
+</tr>
+<tr>
+<td><b>Master of Science</b></td>
+<td>University of Wisconsin-Madison (2002)</td>
+</tr>
+<tr>
+<td></td>
+<td>Industrial Engineering: Manufacturing Systems, E-commerce</td>
+</tr>
+<tr>
+<td><b>Bachelor of Science</b></td>
+<td>University of Wisconsin-Madison (1998)</td>
+</tr>
+<tr>
+<td></td>
+<td>Computer Science</td>
+</tr>
+</tbody></table>
+
+<h2 id="toc_2">Academic Experience</h2>
+
+<table><thead>
+<tr>
+<th></th>
+<th></th>
+</tr>
+</thead><tbody>
+<tr>
+<td><b>Assistant Professor</b></td>
+<td>National Tsing Hua University</td>
+</tr>
+<tr>
+<td>Aug 2010 - present</td>
+<td>College of Technology Management</td>
+</tr>
+<tr>
+<td></td>
+<td>Institute of Service Science</td>
+</tr>
+</tbody></table>
+
+<hr>
+
+<p>layout: default</p>
+
+<h2 id="toc_3">title: Soumya Ray&#39;s Research</h2>
+
+<h1 id="toc_4">Research Papers</h1>
+
+<p>Ray, S., Kim, S. S., and Morris, J. G. 2012. “Online Users&#39; Switching Costs:
+Their Nature and Formation,” <em>Information Systems Research</em> (23:1), pp. 197–213.</p>
+
+<p>Ray, S., Ow, T., and Kim, S. S. 2011. “Security Assurance: How Online Service
+Providers Can Influence Security Control Perceptions and Gain Trust,”
+<em>Decision Sciences</em> (42:2), pp. 391–412.</p>
+
+<p>Ray, S., and Seo, D. 2013. “The Interplay of Conscious and Automatic Mechanisms
+in the Context of Routine Use: An Integrative and Comparative Study of
+Contrasting Mechanisms,” <em>Information and Management</em> (50:7), pp. 523–539.</p>
+
+<p>Ray, S., Kim, S.S., and Morris, J. G. “The Central Role of Engagement in Online
+Communities,” <em>forthcoming: Information Systems Research</em>.</p>
+
       </section>
 
       <footer>
