--- a/background/index.html
+++ b/background/index.html
@@ -21,8 +21,9 @@
         <img src="http://scontent-b-sjc.xx.fbcdn.net/hphotos-ash3/t1.0-9/556713_315533058535785_643286304_n.jpg" />
         <p></p>
         <p class="view"><a href="/research">Research</a></p>
-        <p class="view"><a href="/background">Academic Background</a></p>
-        <p class="view"><a href="https://github.com/soumyaray">View My GitHub Profile</a></p>
+        <p class="view"><a href="/background">Academic background</a></p>
+        <p class="view"><a href="https://Github.com/soumyaray">github/soumyaray</a></p>
+        <p class="view"><a href="/secure">GnuPG public key</a></p>
 
       </header>
       <section>
