--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
         <img src="http://scontent-b-sjc.xx.fbcdn.net/hphotos-ash3/t1.0-9/556713_315533058535785_643286304_n.jpg" />
         <p></p>
         <p class="view"><a href="/research">Research</a></p>
-        <p class="view"><a href="/background">Academic Background</a></p>
-        <p class="view"><a href="https://github.com/soumyaray">View My GitHub Profile</a></p>
+        <p class="view"><a href="/background">Academic background</a></p>
+        <p class="view"><a href="https://Github.com/soumyaray">github/soumyaray</a></p>
+        <p class="view"><a href="/secure">GnuPG public key</a></p>
 
       </header>
       <section>
@@ -64,19 +65,23 @@
 
 <h2 id="toc_2">Research Papers</h2>
 
+<p>Ray, S., Kim, S.S., and Morris, J. G. “The Central Role of Engagement in Online
+Communities,” forthcoming: <em>Information Systems Research</em>.</p>
+
+<p>Hsu, P., and Ray, S. 2014. &quot;Examining Cloud Adoption Inention, Pricing
+Mechanism, and Deployment Model,&quot; forthcoming: <em>International Journal of Information
+Management</em>.</p>
+
+<p>Ray, S., and Seo, D. 2013. “The Interplay of Conscious and Automatic Mechanisms
+in the Context of Routine Use: An Integrative and Comparative Study of
+Contrasting Mechanisms,” <em>Information and Management</em> (50:7), pp. 523–539.</p>
+
 <p>Ray, S., Kim, S. S., and Morris, J. G. 2012. “Online Users&#39; Switching Costs:
 Their Nature and Formation,” <em>Information Systems Research</em> (23:1), pp. 197–213.</p>
 
 <p>Ray, S., Ow, T., and Kim, S. S. 2011. “Security Assurance: How Online Service
 Providers Can Influence Security Control Perceptions and Gain Trust,”
 <em>Decision Sciences</em> (42:2), pp. 391–412.</p>
-
-<p>Ray, S., and Seo, D. 2013. “The Interplay of Conscious and Automatic Mechanisms
-in the Context of Routine Use: An Integrative and Comparative Study of
-Contrasting Mechanisms,” <em>Information and Management</em> (50:7), pp. 523–539.</p>
-
-<p>Ray, S., Kim, S.S., and Morris, J. G. “The Central Role of Engagement in Online
-Communities,” <em>forthcoming: Information Systems Research</em>.</p>
 
       </section>
 
