added social sites

--- a/social/index.html
+++ b/social/index.html
@@ -27,25 +27,13 @@
 
       </header>
       <section>
-        <h2 id="toc_0">Research Papers</h2>
+        <h2 id="toc_0">Social Networks</h2>
 
-<p>Ray, S., Kim, S.S., and Morris, J. G. “The Central Role of Engagement in Online
-Communities,” forthcoming: <em>Information Systems Research</em>.</p>
+<p>Find me on:</p>
 
-<p>Hsu, P., and Ray, S. 2014. &quot;Examining Cloud Adoption Inention, Pricing
-Mechanism, and Deployment Model,&quot; forthcoming: <em>International Journal of Information
-Management</em>.</p>
-
-<p>Ray, S., and Seo, D. 2013. “The Interplay of Conscious and Automatic Mechanisms
-in the Context of Routine Use: An Integrative and Comparative Study of
-Contrasting Mechanisms,” <em>Information and Management</em> (50:7), pp. 523–539.</p>
-
-<p>Ray, S., Kim, S. S., and Morris, J. G. 2012. “Online Users&#39; Switching Costs:
-Their Nature and Formation,” <em>Information Systems Research</em> (23:1), pp. 197–213.</p>
-
-<p>Ray, S., Ow, T., and Kim, S. S. 2011. “Security Assurance: How Online Service
-Providers Can Influence Security Control Perceptions and Gain Trust,”
-<em>Decision Sciences</em> (42:2), pp. 391–412.</p>
+<p><a href="https://www.facebook.com/soumya.ray.prof"><div id="SNSbutton">Facebook</div></a>
+<a href="http://www.linkedin.com/profile/view?id=12244370"><div id="SNSbutton">LinkedIn</div></a>
+<a href="https://nthu.academia.edu/SoumyaRay"><div id="SNSbutton">Academia.edu</div></a></p>
 
       </section>
 
