--- a/service/index.html
+++ b/service/index.html
@@ -28,41 +28,45 @@
 
       </header>
       <section>
-        <h2 id="toc_0">Academic Experience</h2>
+        <h2 id="toc_0">Professional Service</h2>
 
-<table><thead>
-<tr>
-<th></th>
-<th></th>
-</tr>
-</thead><tbody>
-<tr>
-<td><b>Assistant Professor</b><br>Aug 2010 - present</td>
-<td>National Tsing Hua University <br>College of Technology Management<br>Institute of Service Science</td>
-</tr>
-</tbody></table>
+<h3 id="toc_1">Reviewer for major international journals:</h3>
 
-<h2 id="toc_1">Education</h2>
+<ul>
+<li>MIS Quarterly - MISQ 2012, 2013</li>
+<li>Information Systems Research - ISR 2012</li>
+<li>Decision Support Systems - DSS 2013</li>
+<li>DATA BASE - 2012, 2013</li>
+<li>International Journal of Quality and Service Sciences - IJQSS 2014</li>
+<li>Information Systems and e-Business Management - ISEB 2012</li>
+<li>Pacific Asian Journal of the Association for Information Systems - PAJAIS 2011</li>
+<li>National Taiwan University (NTU) Management Review  - 2014</li>
+</ul>
 
-<table><thead>
-<tr>
-<th></th>
-<th></th>
-</tr>
-</thead><tbody>
-<tr>
-<td><b>Doctor of Philosophy</b></td>
-<td>University of Wisconsin-Madison (2010) <br>Information Systems; Applied Statistical Methods</td>
-</tr>
-<tr>
-<td><b>Master of Science</b></td>
-<td>University of Wisconsin-Madison (2002) <br>Industrial Engineering: Manufacturing Systems, E-commerce</td>
-</tr>
-<tr>
-<td><b>Bachelor of Science</b></td>
-<td>University of Wisconsin-Madison (1998) <br>Computer Science</td>
-</tr>
-</tbody></table>
+<h3 id="toc_2">Reviewer for major international conferences:</h3>
+
+<ul>
+<li>International Conference on Information Systems - ICIS 2012</li>
+<li>Hawaii International Conference on System Sciences - HICSS 2011, 2013</li>
+<li>International Conference on Information Resources Management - ICIRM 2011</li>
+<li>Pacific Asia Conference on Information Systems - PACIS 2009</li>
+</ul>
+
+<h3 id="toc_3">Discussant for a major international conference:</h3>
+
+<ul>
+<li>International Association for Management of Technology - IAMOT 2012</li>
+</ul>
+
+<h3 id="toc_4">Invited talks at major Taiwanese universities:</h3>
+
+<ul>
+<li>National Taiwan University (2011)</li>
+<li>National Central University (2012)</li>
+<li>National Sun Yat-Sen University (2012, 2013)</li>
+<li>National Tsing-Hua University (2012)</li>
+<li>Yuan-Ze University (2012)</li>
+</ul>
 
       </section>
 
