--- a/research/index.html
+++ b/research/index.html
@@ -21,6 +21,7 @@
         <p></p>
         <p class="view"><a href="/research">Research</a></p>
         <p class="view"><a href="/background">Academic background</a></p>
+        <p class="view"><a href="/service">Professional service</a></p>
         <p class="view"><a href="https://github.com/soumyaray">Github/soumyaray</a></p>
         <p class="view"><a href="/secure">GnuPG public key</a></p>
         <p class="view"><a href="/social">Find me online</a></p>
