--- a/background/index.html
+++ b/background/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Soumya Ray by soumyaray</title>
+    <title>Soumya Ray</title>
     
     
 
@@ -30,17 +30,16 @@
       <section>
         <h2 id="toc_0">Academic Experience</h2>
 
-<table><thead>
-<tr>
-<th></th>
-<th></th>
-</tr>
-</thead><tbody>
-<tr>
-<td><b>Assistant Professor</b><br>Aug 2010 - present</td>
-<td>National Tsing Hua University <br>College of Technology Management<br>Institute of Service Science</td>
-</tr>
-</tbody></table>
+<table>
+  <tr>
+    <td>
+      <b>Assistant Professor</b><br>Aug 2010 - present
+    </td>
+    <td>
+      Institute of Service Science<br>College of Technology Management<br>National Tsing Hua University
+    </td>
+  </tr>
+</table>
 
 <h2 id="toc_1">Education</h2>
 
