--- a/social/index.html
+++ b/social/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Soumya Ray by soumyaray</title>
+    <title>Soumya Ray</title>
     
     
 
@@ -28,13 +28,19 @@
 
       </header>
       <section>
-        <h2 id="toc_0">Social Networks</h2>
+        <h2 id="toc_0">Social Contact</h2>
+
+<p>Email me at:</p>
+
+<p><span style="margin-left:10px"><img src="/images/soumya.ray.nthu.png" alt="contact me"></span></p>
 
 <p>Find me on:</p>
 
-<p><a href="https://www.facebook.com/soumya.ray.prof"><div id="SNSbutton">Facebook</div></a>
-<a href="http://www.linkedin.com/profile/view?id=12244370"><div id="SNSbutton">LinkedIn</div></a>
-<a href="https://nthu.academia.edu/SoumyaRay"><div id="SNSbutton">Academia.edu</div></a></p>
+<div id="horiz_container">
+  <div id="SNSbutton"><a href="https://www.facebook.com/soumya.ray.prof">Facebook</a></div>
+  <div id="SNSbutton"><a href="https://www.linkedin.com/profile/view?id=12244370">LinkedIn</a></div>
+  <div id="SNSbutton"><a href="https://nthu.academia.edu/SoumyaRay">Academia.edu</a></div>
+</div>
 
       </section>
 
