--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Soumya Ray by soumyaray</title>
+    <title>Soumya Ray</title>
     
     
 
@@ -28,45 +28,25 @@
 
       </header>
       <section>
-        <h2 id="toc_0">Academic Experience</h2>
+        <table>
+  <tr>
+    <td>
+      <b>Assistant Professor</b><br>Aug 2010 - present
+    </td>
+    <td>
+      Institute of Service Science<br>College of Technology Management<br>National Tsing Hua University
+    </td>
+  </tr>
+</table>
 
-<table><thead>
-<tr>
-<th></th>
-<th></th>
-</tr>
-</thead><tbody>
-<tr>
-<td><b>Assistant Professor</b><br>Aug 2010 - present</td>
-<td>National Tsing Hua University <br>College of Technology Management<br>Institute of Service Science</td>
-</tr>
-</tbody></table>
+<div id="horiz_container">
+  <div id="SNSbutton"><a href="https://www.facebook.com/soumya.ray.prof">Facebook</a></div>
+  <div id="SNSbutton"><a href="https://www.linkedin.com/profile/view?id=12244370">LinkedIn</a></div>
+  <div id="SNSbutton"><a href="https://nthu.academia.edu/SoumyaRay">Academia.edu</a></div>
+</div>
 
-<h2 id="toc_1">Education</h2>
-
-<table><thead>
-<tr>
-<th></th>
-<th></th>
-</tr>
-</thead><tbody>
-<tr>
-<td><b>Doctor of Philosophy</b></td>
-<td>University of Wisconsin-Madison (2010) <br>Information Systems; Applied Statistical Methods</td>
-</tr>
-<tr>
-<td><b>Master of Science</b></td>
-<td>University of Wisconsin-Madison (2002) <br>Industrial Engineering: Manufacturing Systems, E-commerce</td>
-</tr>
-<tr>
-<td><b>Bachelor of Science</b></td>
-<td>University of Wisconsin-Madison (1998) <br>Computer Science</td>
-</tr>
-</tbody></table>
-
-<h2 id="toc_2">Research Papers</h2>
-
-<p>Ray, S., Kim, S.S., and Morris, J. G. “The Central Role of Engagement in Online
+<p><br>
+Ray, S., Kim, S.S., and Morris, J. G. “The Central Role of Engagement in Online
 Communities,” forthcoming: <em>Information Systems Research</em>.</p>
 
 <p>Hsu, P., and Ray, S. 2014. &quot;Examining Cloud Adoption Inention, Pricing
