--- a/secure/index.html
+++ b/secure/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Soumya Ray by soumyaray</title>
+    <title>Soumya Ray</title>
     
     
 
