updated service page

--- a/background/index.html
+++ b/background/index.html
@@ -28,7 +28,7 @@
 
       </header>
       <section>
-        <h2 id="toc_0">Academic Experience</h2>
+        <h2 id="academic-experience">Academic Experience</h2>
 
 <table>
   <tr>
@@ -41,7 +41,7 @@
   </tr>
 </table>
 
-<h2 id="toc_1">Education</h2>
+<h2 id="education">Education</h2>
 
 <table><thead>
 <tr>
