--- a/policy/index.html
+++ b/policy/index.html
@@ -28,7 +28,7 @@
 
       </header>
       <section>
-        <h2 id="toc_0">Analytics Disclaimer</h2>
+        <h2 id="analytics-disclaimer">Analytics Disclaimer</h2>
 
 <p>This website uses Google Analytics to help analyse how users use the site.</p>
 
