--- a/research/index.html
+++ b/research/index.html
@@ -28,7 +28,7 @@
 
       </header>
       <section>
-        <h2 id="toc_0">Research Papers</h2>
+        <h2 id="research-papers">Research Papers</h2>
 
 <p>Ray, S., Kim, S.S., and Morris, J. G. “The Central Role of Engagement in Online
 Communities,” forthcoming: <em>Information Systems Research</em>.</p>
