--- a/social/index.html
+++ b/social/index.html
@@ -28,7 +28,7 @@
 
       </header>
       <section>
-        <h2 id="toc_0">Social Contact</h2>
+        <h2 id="social-contact">Social Contact</h2>
 
 <p>Email me at:</p>
 
