--- a/research/index.html
+++ b/research/index.html
@@ -30,23 +30,53 @@
       <section>
         <h2 id="research-papers">Research Papers</h2>
 
-<p>Ray, S., Kim, S.S., and Morris, J. G. “The Central Role of Engagement in Online
-Communities,” forthcoming: <em>Information Systems Research</em>.</p>
+<div class="pub">
+  <div class="pub_ref">
+    Ray, S., Kim, S.S., and Morris, J. G. “The Central Role of Engagement in
+    Online Communities,”
+    <span class="journal">Information Systems Research</span>.
+  </div>
+  <div class="pub_url">forthcoming</div>
+</div>
 
-<p>Hsu, P., and Ray, S. 2014. &quot;Examining Cloud Adoption Inention, Pricing
-Mechanism, and Deployment Model,&quot; forthcoming: <em>International Journal of Information
-Management</em>.</p>
+<div class="pub">
+  <div class="pub_ref">
+    Hsu, P., and Ray, S. 2014. "Examining Cloud Adoption Inention, Pricing
+    Mechanism, and Deployment Model,"
+    <span class="journal">International Journal of Information Management</span>.
+  </div>
+  <div class="pub_url">forthcoming</div>
+</div>
 
-<p>Ray, S., and Seo, D. 2013. “The Interplay of Conscious and Automatic Mechanisms
-in the Context of Routine Use: An Integrative and Comparative Study of
-Contrasting Mechanisms,” <em>Information and Management</em> (50:7), pp. 523–539.</p>
+<div class="pub">
+  <div class="pub_ref">
+    Ray, S., and Seo, D. 2013. “The Interplay of Conscious and Automatic Mechanisms
+    in the Context of Routine Use: An Integrative and Comparative Study of
+    Contrasting Mechanisms,”
+    <span class="journal">Information and Management</span> (50:7), pp. 523–539.
+  </div>
+  <div class="pub_url"><a href="http://scholar.google.com/scholar?oi=bibs&hl=en&oe=ASCII&cluster=12897075446534154787&btnI=Lucky">find it online</a></div><div class="pub_cit">cited 1 times</div>
+</div>
 
-<p>Ray, S., Kim, S. S., and Morris, J. G. 2012. “Online Users&#39; Switching Costs:
-Their Nature and Formation,” <em>Information Systems Research</em> (23:1), pp. 197–213.</p>
+<div class="pub">
+  <div class="pub_ref">
+    Ray, S., Kim, S. S., and Morris, J. G. 2012. “Online Users' Switching Costs:
+    Their Nature and Formation,”
+    <span class="journal">Information Systems Research</span> (23:1), pp. 197–213.
+  </div>
+  <div class="pub_url"><a href="http://scholar.google.com/scholar?oi=bibs&hl=en&oe=ASCII&cluster=11777343089817755068&btnI=Lucky">find it online</a></div><div class="pub_cit">cited 14 times</div>
+</div>
 
-<p>Ray, S., Ow, T., and Kim, S. S. 2011. “Security Assurance: How Online Service
-Providers Can Influence Security Control Perceptions and Gain Trust,”
-<em>Decision Sciences</em> (42:2), pp. 391–412.</p>
+<div class="pub">
+  <div class="pub_ref">
+    Ray, S., Ow, T., and Kim, S. S. 2011. “Security Assurance: How Online Service
+    Providers Can Influence Security Control Perceptions and Gain Trust,”
+    <span class="journal">Decision Sciences</span> (42:2), pp. 391–412.
+  </div>
+  <div class="pub_url"><a href="http://scholar.google.com/scholar?oi=bibs&hl=en&oe=ASCII&cluster=5641438009093678993&btnI=Lucky">find it online</a></div><div class="pub_cit">cited 15 times</div>
+</div>
+
+<p><br><br></p>
 
       </section>
 
