updated pub ref links; edited policy

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     Contrasting Mechanisms,”
     <span class="journal">Information and Management</span> (50:7), pp. 523–539.
   </div>
-  <div class="pub_url"><a href="http://scholar.google.com/scholar?oi=bibs&hl=en&oe=ASCII&cluster=12897075446534154787&btnI=Lucky">find it online</a></div><div class="pub_cit">cited 1 times</div>
+  <div class="pub_url"><a href="http://www.sciencedirect.com/science/article/pii/S0378720613000803">find it online</a></div><div class="pub_cit">cited 1 times</div>
 </div>
 
 <div class="pub">
@@ -80,7 +80,7 @@
     Their Nature and Formation,”
     <span class="journal">Information Systems Research</span> (23:1), pp. 197–213.
   </div>
-  <div class="pub_url"><a href="http://scholar.google.com/scholar?oi=bibs&hl=en&oe=ASCII&cluster=11777343089817755068&btnI=Lucky">find it online</a></div><div class="pub_cit">cited 14 times</div>
+  <div class="pub_url"><a href="http://pubsonline.informs.org/doi/abs/10.1287/isre.1100.0340">find it online</a></div><div class="pub_cit">cited 14 times</div>
 </div>
 
 <div class="pub">
@@ -89,7 +89,7 @@
     Providers Can Influence Security Control Perceptions and Gain Trust,”
     <span class="journal">Decision Sciences</span> (42:2), pp. 391–412.
   </div>
-  <div class="pub_url"><a href="http://scholar.google.com/scholar?oi=bibs&hl=en&oe=ASCII&cluster=5641438009093678993&btnI=Lucky">find it online</a></div><div class="pub_cit">cited 15 times</div>
+  <div class="pub_url"><a href="http://onlinelibrary.wiley.com/doi/10.1111/j.1540-5915.2011.00316.x/full">find it online</a></div><div class="pub_cit">cited 15 times</div>
 </div>
 
 <p><br><br></p>
