--- a/research/index.html
+++ b/research/index.html
@@ -32,48 +32,81 @@
 
 <div class="pub">
   <div class="pub_ref">
-    Ray, S., Kim, S.S., and Morris, J. G. “The Central Role of Engagement in
+    Ray, S., Kim, S.S., and Morris, J.G. “The Central Role of Engagement in
     Online Communities,”
     <span class="journal">Information Systems Research</span>.
   </div>
   <div class="pub_url">forthcoming</div>
 </div>
 
-<div class="pub">
-  <div class="pub_ref">
-    Hsu, P., and Ray, S. 2014. "Examining Cloud Adoption Inention, Pricing
-    Mechanism, and Deployment Model,"
-    <span class="journal">International Journal of Information Management</span>.
+<!-- IJIM paper 2014 (CLOUD-TOE) -->
+
+<div class='pub'>
+  <div class='pub_ref'>
+    Hsu, P., Ray, S., & Li-Hsieh, Y. 2014. “Examining cloud computing adoption intention, pricing mechanism, and deployment model”
+    <span class='journal'>International Journal of Information Management</span>
+    (34:4), pp. 474-488.
   </div>
-  <div class="pub_url">forthcoming</div>
+  <div class='pub_url'>
+    <a href='http://www.sciencedirect.com/science/article/pii/S0268401214000449'>
+      find it online
+    </a>
+  </div>
+  <div class='pub_cit'></div>
 </div>
 
-<div class="pub">
-  <div class="pub_ref">
-    Ray, S., and Seo, D. 2013. “The Interplay of Conscious and Automatic Mechanisms
-    in the Context of Routine Use: An Integrative and Comparative Study of
-    Contrasting Mechanisms,”
-    <span class="journal">Information and Management</span> (50:7), pp. 523–539.
+<!-- I&M paper 2013 (LOYHAB) -->
+
+<div class='pub'>
+  <div class='pub_ref'>
+    Ray, S., and Seo, D. 2013. “The interplay of conscious and automatic mechanisms in the context of routine use: An integrative and comparative study of contrasting mechanisms”
+    <span class='journal'>Information & Management</span>
+    (50:7), pp. 523-539.
   </div>
-  <div class="pub_url"><a href="http://www.sciencedirect.com/science/article/pii/S0378720613000803">find it online</a></div><div class="pub_cit">cited 1 times</div>
+  <div class='pub_url'>
+    <a href='http://www.sciencedirect.com/science/article/pii/S0378720613000803'>
+      find it online
+    </a>
+  </div>
+  <div class='pub_cit'>
+    cited 1 times
+  </div>
 </div>
 
-<div class="pub">
-  <div class="pub_ref">
-    Ray, S., Kim, S. S., and Morris, J. G. 2012. “Online Users' Switching Costs:
-    Their Nature and Formation,”
-    <span class="journal">Information Systems Research</span> (23:1), pp. 197–213.
+<!-- ISR paper 2012 (ePSC) -->
+
+<div class='pub'>
+  <div class='pub_ref'>
+    Ray, S., Kim, S.S., & Morris, J.G. 2012. “Research NoteOnline Users' Switching Costs: Their Nature and Formation”
+    <span class='journal'>Information Systems Research</span>
+    (23:1), pp. 197-213.
   </div>
-  <div class="pub_url"><a href="http://pubsonline.informs.org/doi/abs/10.1287/isre.1100.0340">find it online</a></div><div class="pub_cit">cited 14 times</div>
+  <div class='pub_url'>
+    <a href='http://pubsonline.informs.org/doi/abs/10.1287/isre.1100.0340'>
+      find it online
+    </a>
+  </div>
+  <div class='pub_cit'>
+    cited 14 times
+  </div>
 </div>
 
-<div class="pub">
-  <div class="pub_ref">
-    Ray, S., Ow, T., and Kim, S. S. 2011. “Security Assurance: How Online Service
-    Providers Can Influence Security Control Perceptions and Gain Trust,”
-    <span class="journal">Decision Sciences</span> (42:2), pp. 391–412.
+<!-- DS paper 2011 (SEC) -->
+
+<div class='pub'>
+  <div class='pub_ref'>
+    Ray, S., Ow, T., & Kim, S.S. 2011. “Security Assurance: How Online Service Providers Can Influence Security Control Perceptions and Gain Trust”
+    <span class='journal'>Decision Sciences</span>
+    (42:2), pp. 391-412.
   </div>
-  <div class="pub_url"><a href="http://onlinelibrary.wiley.com/doi/10.1111/j.1540-5915.2011.00316.x/full">find it online</a></div><div class="pub_cit">cited 15 times</div>
+  <div class='pub_url'>
+    <a href='http://onlinelibrary.wiley.com/doi/10.1111/j.1540-5915.2011.00316.x/full'>
+      find it online
+    </a>
+  </div>
+  <div class='pub_cit'>
+    cited 15 times
+  </div>
 </div>
 
 <p><br><br></p>
