Added 'Awards and Grants' section

--- a/research/index.html
+++ b/research/index.html
@@ -22,13 +22,14 @@
           <p class="view"><a href="/research">Research</a></p>
 <p class="view"><a href="/background">Academic background</a></p>
 <p class="view"><a href="/service">Professional service</a></p>
+<p class="view"><a href="/awards">Awards and Grants</a></p>
 <p class="view"><a href="https://github.com/soumyaray">Github/soumyaray</a></p>
 <p class="view"><a href="/secure">GPG public key</a></p>
 <p class="view"><a href="/social">Find me online</a></p>
 
       </header>
       <section>
-        <h2 id="research-papers">Research Papers</h2>
+        <h2 id="toc_0">Research Papers</h2>
 
 <div class="pub">
   <div class="pub_ref">
@@ -69,7 +70,7 @@
     </a>
   </div>
   <div class='pub_cit'>
-    cited 1 times
+    cited 2 times
   </div>
 </div>
 
@@ -87,7 +88,7 @@
     </a>
   </div>
   <div class='pub_cit'>
-    cited 14 times
+    cited 15 times
   </div>
 </div>
 
