--- a/service/index.html
+++ b/service/index.html
@@ -22,15 +22,16 @@
           <p class="view"><a href="/research">Research</a></p>
 <p class="view"><a href="/background">Academic background</a></p>
 <p class="view"><a href="/service">Professional service</a></p>
+<p class="view"><a href="/awards">Awards and Grants</a></p>
 <p class="view"><a href="https://github.com/soumyaray">Github/soumyaray</a></p>
 <p class="view"><a href="/secure">GPG public key</a></p>
 <p class="view"><a href="/social">Find me online</a></p>
 
       </header>
       <section>
-        <h2 id="professional-service">Professional Service</h2>
+        <h2 id="toc_0">Professional Service</h2>
 
-<h3 id="reviewer-for-journals:">Reviewer for journals:</h3>
+<h3 id="toc_1">Reviewer for journals:</h3>
 
 <ul>
 <li>MIS Quarterly - MISQ 2012, 2013</li>
@@ -43,7 +44,7 @@
 <li>National Taiwan University (NTU) Management Review  - 2014</li>
 </ul>
 
-<h3 id="reviewer-for-conferences:">Reviewer for conferences:</h3>
+<h3 id="toc_2">Reviewer for conferences:</h3>
 
 <ul>
 <li>International Conference on Information Systems - ICIS 2012</li>
@@ -52,13 +53,13 @@
 <li>Pacific Asia Conference on Information Systems - PACIS 2009</li>
 </ul>
 
-<h3 id="discussant-for-conferences:">Discussant for conferences:</h3>
+<h3 id="toc_3">Discussant for conferences:</h3>
 
 <ul>
 <li>International Association for Management of Technology - IAMOT 2012</li>
 </ul>
 
-<h3 id="invited-talks-(taiwan):">Invited talks (Taiwan):</h3>
+<h3 id="toc_4">Invited talks (Taiwan):</h3>
 
 <ul>
 <li>National Taiwan University (2011)</li>
