--- a/background/index.html
+++ b/background/index.html
@@ -22,13 +22,14 @@
           <p class="view"><a href="/research">Research</a></p>
 <p class="view"><a href="/background">Academic background</a></p>
 <p class="view"><a href="/service">Professional service</a></p>
+<p class="view"><a href="/awards">Awards and Grants</a></p>
 <p class="view"><a href="https://github.com/soumyaray">Github/soumyaray</a></p>
 <p class="view"><a href="/secure">GPG public key</a></p>
 <p class="view"><a href="/social">Find me online</a></p>
 
       </header>
       <section>
-        <h2 id="academic-experience">Academic Experience</h2>
+        <h2 id="toc_0">Academic Experience</h2>
 
 <table>
   <tr>
@@ -41,7 +42,7 @@
   </tr>
 </table>
 
-<h2 id="education">Education</h2>
+<h2 id="toc_1">Education</h2>
 
 <table><thead>
 <tr>
