--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
           <p class="view"><a href="/research">Research</a></p>
 <p class="view"><a href="/background">Academic background</a></p>
 <p class="view"><a href="/service">Professional service</a></p>
+<p class="view"><a href="/awards">Awards and Grants</a></p>
 <p class="view"><a href="https://github.com/soumyaray">Github/soumyaray</a></p>
 <p class="view"><a href="/secure">GPG public key</a></p>
 <p class="view"><a href="/social">Find me online</a></p>
@@ -86,7 +87,7 @@
     </a>
   </div>
   <div class='pub_cit'>
-    cited 1 times
+    cited 2 times
   </div>
 </div>
 
@@ -104,7 +105,7 @@
     </a>
   </div>
   <div class='pub_cit'>
-    cited 14 times
+    cited 15 times
   </div>
 </div>
 
