Created section for classes

--- a/classes/index.html
+++ b/classes/index.html
@@ -29,40 +29,31 @@
 
       </header>
       <section>
-        <h2 id="toc_0">Academic Experience</h2>
+        <h2 id="toc_0">Classes</h2>
 
-<table>
-  <tr>
-    <td>
-      <b>Assistant Professor</b><br>Aug 2010 - present
-    </td>
-    <td>
-      Institute of Service Science<br>College of Technology Management<br>National Tsing Hua University
-    </td>
-  </tr>
-</table>
+<h3 id="toc_1">Service Oriented Architecture</h3>
 
-<h2 id="toc_1">Education</h2>
+<p>This class develops skills to create robust and composable online services.
+In the coming semester, we will learn how to develop microservices as building blocks, and larger SAAS architectures based on them.
+Students will develop a habit of creating high quality code, publishing their work as open source, and deploying on cloud platforms.
+This class favors the tools and practices of IT startups and the open source movement.
+[<a href="/classes/SOA">Detailed information</a>]<br></p>
 
-<table><thead>
-<tr>
-<th></th>
-<th></th>
-</tr>
-</thead><tbody>
-<tr>
-<td><b>Doctor of Philosophy</b></td>
-<td>University of Wisconsin-Madison (2010) <br>Information Systems; Applied Statistical Methods</td>
-</tr>
-<tr>
-<td><b>Master of Science</b></td>
-<td>University of Wisconsin-Madison (2002) <br>Industrial Engineering: Manufacturing Systems, E-commerce</td>
-</tr>
-<tr>
-<td><b>Bachelor of Science</b></td>
-<td>University of Wisconsin-Madison (1998) <br>Computer Science</td>
-</tr>
-</tbody></table>
+<h3 id="toc_2">Business Analytics Using Statistical Modeling</h3>
+
+<p>Detailed information coming this summer (check back in July/August)</p>
+
+<p>This class develops skills to understand the nature of data and infer knowledge from it.
+We will learn how to match our intuition and prior theory with simulation, visualization, and statistical techniques.
+This class favors the tools and techniques of marketing research and practice.</p>
+
+<h3 id="toc_3">Service Security</h3>
+
+<p>More information coming this Fall (check back in November/December)</p>
+
+<hr>
+
+<p>For more information on any of these classes, please do not hesitate to <a href="social">contact me</a>.</p>
 
       </section>
 
