Added info on BASM class

--- a/classes/index.html
+++ b/classes/index.html
@@ -33,15 +33,15 @@
 
 <h3 id="toc_1">Service Oriented Architecture</h3>
 
-<p>This class develops skills to create robust and composable online services.
+<p>[<a href="/classes/SOA">Detailed information</a> | <a href="https://docs.google.com/spreadsheets/d/1R1h9srDttvKKJvsrOPTt_zgoLfbRRtQErWsv7QrVfMg/pubhtml">Schedule</a>]<br>
+This class develops skills to create robust and composable online services.
 In the coming semester, we will learn how to develop microservices as building blocks, and larger SAAS architectures based on them.
 Students will develop a habit of creating high quality code, publishing their work as open source, and deploying on cloud platforms.
-This class favors the tools and practices of IT startups and the open source movement.
-[<a href="/classes/SOA">Detailed information</a>]<br></p>
+This class favors the tools and practices of IT startups and the open source movement.</p>
 
 <h3 id="toc_2">Business Analytics Using Statistical Modeling</h3>
 
-<p>Detailed information coming this summer (check back in July/August)</p>
+<p>[<a href="/classes/BASM">Detailed information</a> | Syllabus coming in August]<br></p>
 
 <p>This class develops skills to understand the nature of data and infer knowledge from it.
 We will learn how to match our intuition and prior theory with simulation, visualization, and statistical techniques.
