Corrected class information

--- a/classes/BASM/index.html
+++ b/classes/BASM/index.html
@@ -31,30 +31,60 @@
       <section>
         <h2 id="toc_0">Class: Business Analytics Using Statistical Modeling</h2>
 
-<p>relevant concentration: <a href="http://bit.ly/NTHU-ISS-BA">Business Analytics Module</a></p>
+<p><em>Prerequisites: Introductory probability and statistics</em></p>
 
 <h3 id="toc_1">Description</h3>
 
-<h4 id="toc_2">The Essence for Service Science:</h4>
+<h4 id="toc_2">Learning Objectives</h4>
+
+<ul>
+<li>Explore and describe data</li>
+<li>Guard against fallacious use of statistics</li>
+<li>Test theory against data</li>
+<li>Capture a story from the data</li>
+</ul>
+
+<h4 id="toc_3">Course Outline</h4>
+
+<ul>
+<li>Understanding error: the inferential process and sampling</li>
+<li>Describing data: distributions, visualization, and statistics</li>
+<li>Data simulation and bootstrapping</li>
+<li>Regression Modeling</li>
+<li>Contingency perspective: moderation and interactions</li>
+<li>Experiments: A/B and factorial design</li>
+<li>Creating latent constructs: Principal component analysis</li>
+<li>Partial Least Squares: path modeling and model comparison</li>
+</ul>
+
+<h4 id="toc_4">Tools</h4>
+
+<ul>
+<li>R, RStudio</li>
+<li>Excel, SPSS</li>
+</ul>
+
+<h3 id="toc_5">Relation to Business Analytics Concentration</h3>
+
+<h4 id="toc_6">Related Concepts</h4>
 
 <ul>
 <li>Humane and socially responsible analytics: applying analytics to benefit consumers, employees, and society</li>
 <li>Data-driven service innovation: helping discover customer needs and aid service design using analytics</li>
 </ul>
 
-<h4 id="toc_3">The key concepts, techniques, and capabilities delivered</h4>
+<h4 id="toc_7">Related Skills</h4>
 
 <ul>
 <li>Discovering and collecting data</li>
 <li>Integrating, preparing, and assessing data for quality</li>
 <li>Exploring and understanding the nature of data and information</li>
 <li>Visualizing and presenting data</li>
-<li>Classifying, predicting, and forecasting</li>
 <li>Modeling, quantifying, and assessing our domain understanding</li>
 <li>Evaluating and comparing model performance</li>
 </ul>
 
-<h4 id="toc_4">The learning goals</h4>
+<h4 id="toc_8">Related Goals</h4>
 
 <ul>
 <li>Be able to identify opportunities for using data analytic methods to benefit services</li>
@@ -66,7 +96,7 @@
 <li>Experience engaging in teamwork in data analytics projects</li>
 </ul>
 
-<h4 id="toc_5">Potentials for academic and industry careers</h4>
+<h4 id="toc_9">Potentials for academic and industry careers</h4>
 
 <ul>
 <li>Business analyst: track and analyze metrics, and guide decision-making</li>
@@ -75,10 +105,6 @@
 <li>Marketer: understand and predict markets, trends, and value networks</li>
 <li>Information technology: create engines for data tools and embed analytics into IT services.</li>
 </ul>
-
-<h3 id="toc_6">Tools</h3>
-
-<p>RStudio, R, Excel</p>
 
       </section>
 
