--- a/research/index.html
+++ b/research/index.html
@@ -37,7 +37,7 @@
     Online Communities,”
     <span class="journal">Information Systems Research</span>.
   </div>
-  <div class="pub_url">forthcoming</div>
+  <div class="pub_url"><a href="http://pubsonline.informs.org/doi/abs/10.1287/isre.2014.0525">forthcoming</a></div>
 </div>
 
 <!-- IJIM paper 2014 (CLOUD-TOE) -->
