Added forthcoming paper

--- a/index.html
+++ b/index.html
@@ -48,14 +48,25 @@
 
 <p><br></p>
 
-<div class="pub">
-  <div class="pub_ref">
-    Ray, S., Kim, S.S., and Morris, J.G. “The Central Role of Engagement in
-    Online Communities,”
-    <span class="journal">Information Systems Research</span>.
+<h3 id="toc_0">Forthcoming:</h3>
+
+<!-- ISR paper 2014 (OC-ENG) -->
+
+<div class='pub'>
+  <div class='pub_ref'>
+    Ray, S., Kim, S.S., & Morris, J.G. 2014. “The Central Role of Engagement in Online Communities”
+    <span class='journal'>Information Systems Research</span>
+    <span>.</span>
   </div>
-  <div class="pub_url"><a href="http://pubsonline.informs.org/doi/abs/10.1287/isre.2014.0525">forthcoming</a></div>
+  <div class='pub_url'>
+    <a href='http://pubsonline.informs.org/doi/abs/10.1287/isre.2014.0525'>
+      forthcoming
+    </a>
+  </div>
+  <div class='pub_cit'></div>
 </div>
+
+<h3 id="toc_1">Published:</h3>
 
 <!-- IJIM paper 2014 (CLOUD-TOE) -->
 
@@ -63,7 +74,7 @@
   <div class='pub_ref'>
     Hsu, P., Ray, S., & Li-Hsieh, Y. 2014. “Examining cloud computing adoption intention, pricing mechanism, and deployment model”
     <span class='journal'>International Journal of Information Management</span>
-    (34:4), pp. 474-488.
+    <span>(34:4), pp. 474-488.</span>
   </div>
   <div class='pub_url'>
     <a href='http://www.sciencedirect.com/science/article/pii/S0268401214000449'>
@@ -79,7 +90,7 @@
   <div class='pub_ref'>
     Ray, S., and Seo, D. 2013. “The interplay of conscious and automatic mechanisms in the context of routine use: An integrative and comparative study of contrasting mechanisms”
     <span class='journal'>Information & Management</span>
-    (50:7), pp. 523-539.
+    <span>(50:7), pp. 523-539.</span>
   </div>
   <div class='pub_url'>
     <a href='http://www.sciencedirect.com/science/article/pii/S0378720613000803'>
@@ -97,7 +108,7 @@
   <div class='pub_ref'>
     Ray, S., Kim, S.S., & Morris, J.G. 2012. “Research NoteOnline Users' Switching Costs: Their Nature and Formation”
     <span class='journal'>Information Systems Research</span>
-    (23:1), pp. 197-213.
+    <span>(23:1), pp. 197-213.</span>
   </div>
   <div class='pub_url'>
     <a href='http://pubsonline.informs.org/doi/abs/10.1287/isre.1100.0340'>
@@ -115,7 +126,7 @@
   <div class='pub_ref'>
     Ray, S., Ow, T., & Kim, S.S. 2011. “Security Assurance: How Online Service Providers Can Influence Security Control Perceptions and Gain Trust”
     <span class='journal'>Decision Sciences</span>
-    (42:2), pp. 391-412.
+    <span>(42:2), pp. 391-412.</span>
   </div>
   <div class='pub_url'>
     <a href='http://onlinelibrary.wiley.com/doi/10.1111/j.1540-5915.2011.00316.x/full'>
