--- a/service/index.html
+++ b/service/index.html
@@ -34,7 +34,7 @@
 <h3 id="toc_1">Reviewer for journals:</h3>
 
 <ul>
-<li>MIS Quarterly - MISQ 2012, 2013</li>
+<li>MIS Quarterly - MISQ 2012, 2013, 2014</li>
 <li>Information Systems Research - ISR 2012</li>
 <li>Decision Support Systems - DSS 2013</li>
 <li>DATA BASE - 2012, 2013</li>
@@ -44,19 +44,20 @@
 <li>National Taiwan University (NTU) Management Review  - 2014</li>
 </ul>
 
-<h3 id="toc_2">Reviewer for conferences:</h3>
+<h3 id="toc_2">Conference Service:</h3>
+
+<ul>
+<li>Panelist: International Conference on Service Science and Innovation (ICSSI) 2013</li>
+<li>Discussant: International Association for Management of Technology (IAMOT) 2012</li>
+</ul>
+
+<h3 id="toc_3">Reviewer for conferences:</h3>
 
 <ul>
 <li>International Conference on Information Systems - ICIS 2012</li>
-<li>Hawaii International Conference on System Sciences - HICSS 2011, 2013</li>
+<li>Hawaii International Conference on System Sciences - HICSS 2011, 2013, 2014</li>
 <li>International Conference on Information Resources Management - ICIRM 2011</li>
 <li>Pacific Asia Conference on Information Systems - PACIS 2009</li>
-</ul>
-
-<h3 id="toc_3">Discussant for conferences:</h3>
-
-<ul>
-<li>International Association for Management of Technology - IAMOT 2012</li>
 </ul>
 
 <h3 id="toc_4">Invited talks (Taiwan):</h3>
