Fixed broken journal info extraction after google scholar redesign

--- a/awards/index.html
+++ b/awards/index.html
@@ -29,16 +29,16 @@
 
       </header>
       <section>
-        <h2 id="toc_0">Awards and Grants</h2>
+        <h2 id="awards-and-grants">Awards and Grants</h2>
 
-<h3 id="toc_1">Academic Awards:</h3>
+<h3 id="academic-awards:">Academic Awards:</h3>
 
 <ul>
 <li>Wu Ta-You Award — 2012 <em>(National Science Council)</em></li>
 <li>New Faculty Research Award — 2012 <em>(National Tsing Hua University)</em></li>
 </ul>
 
-<h3 id="toc_2">Grants</h3>
+<h3 id="grants">Grants</h3>
 
 <ul>
 <li>2014-2015: Ministry of Science and Technology
