--- a/classes/BASM/index.html
+++ b/classes/BASM/index.html
@@ -29,13 +29,13 @@
 
       </header>
       <section>
-        <h2 id="toc_0">Class: Business Analytics Using Statistical Modeling</h2>
+        <h2 id="class:-business-analytics-using-statistical-modeling">Class: Business Analytics Using Statistical Modeling</h2>
 
 <p><em>Prerequisites: Introductory probability and statistics</em></p>
 
-<h3 id="toc_1">Description</h3>
+<h3 id="description">Description</h3>
 
-<h4 id="toc_2">Learning Objectives</h4>
+<h4 id="learning-objectives">Learning Objectives</h4>
 
 <ul>
 <li>Explore and describe data</li>
@@ -44,7 +44,7 @@
 <li>Capture a story from the data</li>
 </ul>
 
-<h4 id="toc_3">Course Outline</h4>
+<h4 id="course-outline">Course Outline</h4>
 
 <ul>
 <li>Understanding error: the inferential process and sampling</li>
@@ -57,23 +57,23 @@
 <li>Partial Least Squares: path modeling and model comparison</li>
 </ul>
 
-<h4 id="toc_4">Tools</h4>
+<h4 id="tools">Tools</h4>
 
 <ul>
 <li>R, RStudio</li>
 <li>Excel, SPSS</li>
 </ul>
 
-<h3 id="toc_5">Relation to Business Analytics Concentration</h3>
+<h3 id="relation-to-business-analytics-concentration">Relation to Business Analytics Concentration</h3>
 
-<h4 id="toc_6">Related Concepts</h4>
+<h4 id="related-concepts">Related Concepts</h4>
 
 <ul>
 <li>Humane and socially responsible analytics: applying analytics to benefit consumers, employees, and society</li>
 <li>Data-driven service innovation: helping discover customer needs and aid service design using analytics</li>
 </ul>
 
-<h4 id="toc_7">Related Skills</h4>
+<h4 id="related-skills">Related Skills</h4>
 
 <ul>
 <li>Discovering and collecting data</li>
@@ -84,7 +84,7 @@
 <li>Evaluating and comparing model performance</li>
 </ul>
 
-<h4 id="toc_8">Related Goals</h4>
+<h4 id="related-goals">Related Goals</h4>
 
 <ul>
 <li>Be able to identify opportunities for using data analytic methods to benefit services</li>
@@ -96,7 +96,7 @@
 <li>Experience engaging in teamwork in data analytics projects</li>
 </ul>
 
-<h4 id="toc_9">Potentials for academic and industry careers</h4>
+<h4 id="potentials-for-academic-and-industry-careers">Potentials for academic and industry careers</h4>
 
 <ul>
 <li>Business analyst: track and analyze metrics, and guide decision-making</li>
