--- a/classes/SOA/index.html
+++ b/classes/SOA/index.html
@@ -29,9 +29,9 @@
 
       </header>
       <section>
-        <h2 id="toc_0">Class: Service Oriented Architecture</h2>
+        <h2 id="class:-service-oriented-architecture">Class: Service Oriented Architecture</h2>
 
-<h3 id="toc_1">Resources</h3>
+<h3 id="resources">Resources</h3>
 
 <p>Class overview: [<a href="https://docs.google.com/spreadsheets/d/1R1h9srDttvKKJvsrOPTt_zgoLfbRRtQErWsv7QrVfMg/pubhtml">Latest Schedule</a>]</p>
 
@@ -45,9 +45,9 @@
   <div id="SNSbutton"><a href="https://github.com/ISS-SOA/class-SOA-repo/wiki">Github Wiki</a></div>
 </div></p>
 
-<h3 id="toc_2">Description</h3>
+<h3 id="description">Description</h3>
 
-<h4 id="toc_3">Learning Objectives</h4>
+<h4 id="learning-objectives">Learning Objectives</h4>
 
 <ul>
 <li>Consuming, delivering, orchestrating, and composing IT services</li>
@@ -57,7 +57,7 @@
 <li>Deploying services for open use and development</li>
 </ul>
 
-<h4 id="toc_4">Course Outline</h4>
+<h4 id="course-outline">Course Outline</h4>
 
 <ul>
 <li>Distributed coding and version control</li>
@@ -70,16 +70,16 @@
 <li>Workflows and messaging</li>
 </ul>
 
-<h4 id="toc_5">Tools</h4>
+<h4 id="tools">Tools</h4>
 
 <ul>
 <li>Ruby, Sinatra, Haml, CSS, JSON, BPMN,</li>
 <li>Git, Github, Heroku, Redis, PostIronMQ, Amazon AWS</li>
 </ul>
 
-<h3 id="toc_6">Relation to Service Oriented Information Technology</h3>
+<h3 id="relation-to-service-oriented-information-technology">Relation to Service Oriented Information Technology</h3>
 
-<h4 id="toc_7">Related Concepts</h4>
+<h4 id="related-concepts">Related Concepts</h4>
 
 <ul>
 <li>Service delivery: using IT to automate, support and deliver services to consumers, enterprise and society.</li>
@@ -88,21 +88,21 @@
 <li>Open philosophy: encourage students to use and contribute to open-source and open-education.</li>
 </ul>
 
-<h4 id="toc_8">Related Skills</h4>
+<h4 id="related-skills">Related Skills</h4>
 
 <ul>
 <li>Key techniques: distributed coding and version control, cloud deployment and SaaS development, behavior-driven development.</li>
 <li>Key capabilities: modern programming skills, software system development</li>
 </ul>
 
-<h4 id="toc_9">Related Goals</h4>
+<h4 id="related-goals">Related Goals</h4>
 
 <ul>
 <li>Students can design and implement IT-enabled service software systems.</li>
 <li>Students can adopt cloud and mobile technologies to develop IT-enabled software systems.</li>
 </ul>
 
-<h4 id="toc_10">Related Careers</h4>
+<h4 id="related-careers">Related Careers</h4>
 
 <ul>
 <li>IT entrepreneur: adopt lean development tools and methods to bootstrap an IT startup.</li>
