--- a/classes/index.html
+++ b/classes/index.html
@@ -29,9 +29,9 @@
 
       </header>
       <section>
-        <h2 id="toc_0">Classes</h2>
+        <h2 id="classes">Classes</h2>
 
-<h3 id="toc_1">Service Oriented Architecture</h3>
+<h3 id="service-oriented-architecture">Service Oriented Architecture</h3>
 
 <p>[<a href="/classes/SOA">Detailed information</a> | <a href="https://docs.google.com/spreadsheets/d/1R1h9srDttvKKJvsrOPTt_zgoLfbRRtQErWsv7QrVfMg/pubhtml">Schedule</a>]<br>
 This class develops skills to create robust and composable online services.
@@ -39,7 +39,7 @@ In the coming semester, we will learn how to develop microservices as building b
 Students will develop a habit of creating high quality code, publishing their work as open source, and deploying on cloud platforms.
 This class favors the tools and practices of IT startups and the open source movement.</p>
 
-<h3 id="toc_2">Business Analytics Using Statistical Modeling</h3>
+<h3 id="business-analytics-using-statistical-modeling">Business Analytics Using Statistical Modeling</h3>
 
 <p>[<a href="/classes/BASM">Detailed information</a> | Syllabus coming in August]<br></p>
 
@@ -47,7 +47,7 @@ This class favors the tools and practices of IT startups and the open source mov
 We will learn how to match our intuition and prior theory with simulation, visualization, and statistical techniques.
 This class favors the tools and techniques of marketing research and practice.</p>
 
-<h3 id="toc_3">Service Security</h3>
+<h3 id="service-security">Service Security</h3>
 
 <p>More information coming this Fall (check back in November/December)</p>
 
