--- a/policy/index.html
+++ b/policy/index.html
@@ -29,7 +29,7 @@
 
       </header>
       <section>
-        <h2 id="toc_0">Analytics Policy</h2>
+        <h2 id="analytics-policy">Analytics Policy</h2>
 
 <p>This website uses Google Analytics to help analyse how users use the site.</p>
 
