--- a/research/index.html
+++ b/research/index.html
@@ -29,15 +29,16 @@
 
       </header>
       <section>
-        <h2 id="toc_0">Research Papers</h2>
+        <h2 id="research-papers">Research Papers</h2>
 
-<h3 id="toc_1">Forthcoming:</h3>
+<h3 id="forthcoming:">Forthcoming:</h3>
 
 <!-- ISR paper 2014 (OC-ENG) -->
 
 <div class='pub'>
   <div class='pub_ref'>
     Ray, S., Kim, S.S., & Morris, J.G. 2014. “The Central Role of Engagement in Online Communities”
+    <br>
     <span class='journal'>Information Systems Research</span>
     <span>.</span>
   </div>
@@ -49,13 +50,14 @@
   <div class='pub_cit'></div>
 </div>
 
-<h3 id="toc_2">Published:</h3>
+<h3 id="published:">Published:</h3>
 
 <!-- IJIM paper 2014 (CLOUD-TOE) -->
 
 <div class='pub'>
   <div class='pub_ref'>
     Hsu, P., Ray, S., & Li-Hsieh, Y. 2014. “Examining cloud computing adoption intention, pricing mechanism, and deployment model”
+    <br>
     <span class='journal'>International Journal of Information Management</span>
     <span>(34:4), pp. 474-488.</span>
   </div>
@@ -64,7 +66,9 @@
       find it online
     </a>
   </div>
-  <div class='pub_cit'></div>
+  <div class='pub_cit'>
+    cited 1 times
+  </div>
 </div>
 
 <!-- I&M paper 2013 (LOYHAB) -->
@@ -72,6 +76,7 @@
 <div class='pub'>
   <div class='pub_ref'>
     Ray, S., and Seo, D. 2013. “The interplay of conscious and automatic mechanisms in the context of routine use: An integrative and comparative study of contrasting mechanisms”
+    <br>
     <span class='journal'>Information & Management</span>
     <span>(50:7), pp. 523-539.</span>
   </div>
@@ -90,6 +95,7 @@
 <div class='pub'>
   <div class='pub_ref'>
     Ray, S., Kim, S.S., & Morris, J.G. 2012. “Research NoteOnline Users' Switching Costs: Their Nature and Formation”
+    <br>
     <span class='journal'>Information Systems Research</span>
     <span>(23:1), pp. 197-213.</span>
   </div>
@@ -108,6 +114,7 @@
 <div class='pub'>
   <div class='pub_ref'>
     Ray, S., Ow, T., & Kim, S.S. 2011. “Security Assurance: How Online Service Providers Can Influence Security Control Perceptions and Gain Trust”
+    <br>
     <span class='journal'>Decision Sciences</span>
     <span>(42:2), pp. 391-412.</span>
   </div>
