--- a/service/index.html
+++ b/service/index.html
@@ -29,9 +29,9 @@
 
       </header>
       <section>
-        <h2 id="toc_0">Professional Service</h2>
+        <h2 id="professional-service">Professional Service</h2>
 
-<h3 id="toc_1">Reviewer for journals:</h3>
+<h3 id="reviewer-for-journals:">Reviewer for journals:</h3>
 
 <ul>
 <li>MIS Quarterly - MISQ 2012, 2013, 2014</li>
@@ -44,14 +44,14 @@
 <li>National Taiwan University (NTU) Management Review  - 2014</li>
 </ul>
 
-<h3 id="toc_2">Conference Service:</h3>
+<h3 id="conference-service:">Conference Service:</h3>
 
 <ul>
 <li>Panelist: International Conference on Service Science and Innovation (ICSSI) 2013</li>
 <li>Discussant: International Association for Management of Technology (IAMOT) 2012</li>
 </ul>
 
-<h3 id="toc_3">Reviewer for conferences:</h3>
+<h3 id="reviewer-for-conferences:">Reviewer for conferences:</h3>
 
 <ul>
 <li>International Conference on Information Systems - ICIS 2012</li>
@@ -60,7 +60,7 @@
 <li>Pacific Asia Conference on Information Systems - PACIS 2009</li>
 </ul>
 
-<h3 id="toc_4">Invited talks (Taiwan):</h3>
+<h3 id="invited-talks-(taiwan):">Invited talks (Taiwan):</h3>
 
 <ul>
 <li>National Taiwan University (2011)</li>
