jekyll build to update citation counts

--- a/research/index.html
+++ b/research/index.html
@@ -47,7 +47,9 @@
       forthcoming
     </a>
   </div>
-  <div class='pub_cit'></div>
+  <div class='pub_cit'>
+    cited 1 times
+  </div>
 </div>
 
 <h3 id="published:">Published:</h3>
@@ -67,7 +69,7 @@
     </a>
   </div>
   <div class='pub_cit'>
-    cited 1 times
+    cited 2 times
   </div>
 </div>
 
@@ -124,7 +126,7 @@
     </a>
   </div>
   <div class='pub_cit'>
-    cited 15 times
+    cited 17 times
   </div>
 </div>
 
